Mark complete and Delete added

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "darkreader": "^4.9.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "uuid": "^7.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
