Some Styling improvements

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Max To-Do",
-  "name": "A Powerful To-Do App",
+  "short_name": "A Powerful To-Do App",
+  "name": "Max To-Dos",
   "icons": [
     {
       "src": "favicon.ico",
