--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.11",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "darkreader": "^4.9.2",
-    "react": "^17.0.0-rc.3",
+    "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
-    "react-dom": "^17.0.0-rc.3",
-    "react-scripts": "^4.0.0-next.98",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.3",
     "uuid": "^7.0.3"
   },
   "scripts": {
@@ -23,11 +23,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app",
-    "rules": {
-      "react/jsx-uses-react": "off",
-      "react/react-in-jsx-scope": "off"
-    }
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
