--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#F29E94",
+  "theme_color": "#3F51B5",
   "background_color": "#ffffff"
 }
