--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "darkreader": "^4.9.2",
-    "react": "^16.13.1",
+    "react": "17.0.0",
     "react-beautiful-dnd": "^13.0.0",
-    "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.3",
+    "react-dom": "17.0.0",
+    "react-scripts": "^4.0.0-next.98",
     "uuid": "^7.0.3",
     "wouter": "^2.5.1"
   },
