--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "darkreader": "^4.9.2",
     "react": "17.0.0",
     "react-beautiful-dnd": "^13.0.0",
