--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   "eslintConfig": {
     "extends": "react-app",
     "rules": {
-      "react/jsx-uses-react": "off",
-      "react/react-in-jsx-scope": "off"
+      "react/jsx-uses-react": false,
+      "react/react-in-jsx-scope": false
     }
   },
   "browserslist": {
