now will u like me netlify

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "extends": "react-app",
     "rules": {
       "react/jsx-uses-react": "off",
-      "react/react-in-jsx-scope": "off"
+      "react/react-in-jsx-scope": "off",
+      "unused-vars": "off"
     }
   },
   "browserslist": {
