oops now will u like me

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "rules": {
       "react/jsx-uses-react": "off",
       "react/react-in-jsx-scope": "off",
-      "unused-vars": "off"
+      "no-unused-vars": "off"
     }
   },
   "browserslist": {
