--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
+    "react-flip-move": "^3.0.4",
     "react-scripts": "3.4.4",
     "uuid": "^7.0.3",
     "wouter": "^2.5.1"
