--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -11,7 +11,7 @@
       "avatar_url": "https://avatars0.githubusercontent.com/u/40404519?v=4",
       "profile": "https://github.com/Steffan153",
       "contributions": [
-        "ideas"
+        "code"
       ]
     },
     {
@@ -20,7 +20,7 @@
       "avatar_url": "https://avatars0.githubusercontent.com/u/9085914?v=4",
       "profile": "https://github.com/worachatsun",
       "contributions": [
-        "ideas"
+        "code"
       ]
     },
     {
