--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "darkreader": "^4.9.2",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@types/node": "^14.14.16",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "darkreader": "^4.9.26",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-flip-move": "^3.0.4",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.1",
+    "typescript": "^4.1.3",
     "uuid": "^7.0.3",
-    "wouter": "^2.5.1"
+    "wouter": "^2.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/material-ui": "^0.21.8",
+    "@types/react-beautiful-dnd": "^13.0.0"
   }
 }
